--- a/style.css
+++ b/style.css
@@ -14,11 +14,13 @@ body{
     color: var(--branco-principal);
     font-family: var(--fonte-principal);
     font-size: 16px;
+    font-weight: 400;
 }
 .principal{
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
 }
 .container{
     height: 100vh;
@@ -32,11 +34,11 @@ body{
     color: var(--branco-principal);
     display: block;
     text-decoration: none;
+    margin-bottom: 1em;
 }
-.botao-scundario{
+.botao-secundario{
     background-color: transparent;
     border: 2px solid var(--branco-principal);
-
 }
 .container-aviso{
     color: var(--cinza-secundario);
@@ -45,4 +47,11 @@ body{
 .container-titulo{
     font-size: 28px;
     font-weight: 700;
+}
+.container-imagem{
+    margin: 1em 0 2em 0;
+}
+
+.container-caixa{
+    margin: 0 6em;
 }
