--- a/style.css
+++ b/style.css
@@ -49,9 +49,25 @@ body{
     font-weight: 700;
 }
 .container-imagem{
-    margin: 1em 0 2em 0;
+    margin: 1em 0 2em 0;{
 }
 
 .container-caixa{
     margin: 0 6em;
+}
+.imagem-secundario{
+    width:80%
+}
+.secundario{
+    align-items: center;
+    margin: 0 10em;
+}
+.descricao-titulo{
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal)
+    margin-bottom: 0.1em;
+}
+.descricao-texto{
+    color: var(--cinza-secundario);
 }
